# annict-rs

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README-ja.md  README.md
examples/: auth.rs  sample.rs  sample_async.rs
src/: auth.rs  client.rs  episodes.rs  lib.rs  nonblocking.rs  records.rs  works.rs
src/me/: mod.rs  programs.rs  records.rs  statuses.rs  works.rs
src/nonblocking/: auth.rs  client.rs
tests/: auth.rs  client.rs  episodes.rs  me.rs  readme_examples.rs  records.rs  works.rs
