[package]
name = "annis"
version = "0.0.1"
authors = ["totechite <yutan.h9@gmail.com>"]
description = "Annict API client library"
documentation = "https://docs.rs/annis"
repository = "https://github.com/totechite/annict-rs"
keywords = ["annict", "anime", "api", "library", "web"]
categories = ["api-bindings"]
license = "MIT"
readme = "README.md"

[badges]
travis-ci = { repository = "totechite/annict-rs" }

[dependencies]
reqwest = "0.9.2"
serde_json ="*"