[package]
name = "annis"
version = "0.0.5"
authors = ["totechite <yutan.h9@gmail.com>"]
description = "Annict API client library"
documentation = "https://docs.rs/annis"
repository = "https://github.com/totechite/annict-rs"
keywords = ["annict", "anime", "api", "library", "web"]
categories = ["api-bindings"]
license = "MIT"
readme = "README.md"
edition = "2018"

[badges]
appveyor = { repository = "totechite/annict-rs", branch = "master", service = "github" }
travis-ci = { repository = "totechite/annict-rs", branch = "master" }

[dependencies]
reqwest = "0.9.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
failure = "0.1.5"
