[package]
name = "annis"
version = "0.0.6"
authors = ["totechite <yusuke.kataoka09@gmail.com>"]
description = "Annict API client library"
documentation = "https://docs.rs/annis"
repository = "https://github.com/totechite/annict-rs"
keywords = ["annict", "anime", "api", "library", "web"]
categories = ["api-bindings"]
license = "MIT"
readme = "README.md"
edition = "2018"

[badges]
appveyor = { repository = "totechite/annict-rs", branch = "master", service = "github" }
travis-ci = { repository = "totechite/annict-rs", branch = "master" }

[dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.5"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }

[profile.release]
lto = true